# mcp-over-tsp-python

./: .gitignore  .gitmodules  README.md  pyproject.toml
demo/: README.md
demo/client/: client.py  pyproject.toml  wallet.sqlite
demo/server/: pyproject.toml  server.py  wallet.sqlite
demo/server-git/: pyproject.toml
demo/server-git/src/mcp_server_git/: server.py
demo/server-github-demo/: pyproject.toml  server.py
demo/server-sqlite/: pyproject.toml
demo/server-sqlite/src/mcp_server_sqlite/: server.py
examples/fastmcp/: desktop.py  readme-quickstart.py  text_me.py  unicode_example.py
src/mcp/client/: sse.py  streamable_http.py  websocket.py
src/mcp/server/: __init__.py  sse.py  streamable_http.py  streamable_http_manager.py  transport_security.py  websocket.py
src/mcp/server/fastmcp/: __init__.py  server.py
src/mcp/shared/: tmcp.py  transport_hook.py
tests/issues/: test_100_tool_listing.py  test_141_resource_templates.py  test_152_resource_mime_type.py  test_188_concurrency.py
tests/shared/: test_ws.py
tmcp/: pyproject.toml
tmcp/demo/server-github-demo/: server.py
tmcp/src/tmcp/: tmcp.py
